--- a/WebContent/WEB-INF/classes/messages_en.properties
+++ b/WebContent/WEB-INF/classes/messages_en.properties
@@ -1,8 +1,17 @@
-#application defined error messsages
+#UCM input defined error messsages
+duplicated={0} is duplicated in the DB
+duplicated2={0} is duplicated in the list 
+radio_serial_number.too_long=has more than 12 characters
+radio_serial_number.special_character=contain whitespace or any of |@_"?'%*
+radio_user_alias.too_long=has more than 16 characters
+radio_user_alias.special_character=contain whitespace or any of |@_"&'% or start with the prefix: SZ$ or ZC$
 remedy_id.required=Remedy ID is  required
+remedy.too_long=has more than 14 characters
 request_no.required=Radio ID is required
-duplicated={0} is duplicated 
-required=is required
+request_no.too_long=has more than 30 characters
+sub_entity.too_long=has more than 30 characters
+ucp.too_long=has more than 100 characters
+required=is required, not null or blank
  
 #Spring framework error messages to be used when conversion from form data to bean fails
 typeMismatch.int={0} Value must be an integer
